--- a/mainCSS.css
+++ b/mainCSS.css
@@ -59,6 +59,11 @@ body{
     left: 7vw;
 }
 
+a[href^="mailto:"] {
+    position: relative;
+    z-index: 9999;
+}
+
 /*************************************************************/
 /*HEADER STUFF************************************************/
 /*************************************************************/
